# Kraken

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE  LICENSE  README.md  TODO.md
Apology/: apology.hpp
Catch2/: catch.hpp
docs/: about_constants.md  about_matrix.md  about_numeric.md  about_numeric_methods.md
source/examples/basic_math/: matrix_10_10_random_swap.cpp
tests/: matrix_tests.cpp  numeric_methods_tests.cpp  numeric_tests.cpp
